@@ -18,7 +18,7 @@ MDS macro-assembler for PicoBlaze is a two stage fast macro-assembler inspired b
     to write a document properly describing any programming language, including the assembly language, is always a challenging task. If you find a mistake or improperly covered area in this documentation, please let us know, we will fix that and provide you with the fixed version as soon as possible.
 
 \clearpage
-\section{Basics}
+\section{General}
     \subsection{Main differences from the Xilinx assembler}
         \begin{description}
             \item[Default radix is decimal, not hexadecimal.]~\\
